# crust

./: .gitignore  Cargo.toml  compile.sh  dev.sh  index.html  publish.sh
assets/: crust_bg.275a712e.wasm  index.d01d78b3.js  index.d21ef01a.css  worker.92bc44a5.js
crust-ui/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crust-ui/crust/: crust.d.ts  crust.js  crust_bg.wasm  crust_bg.wasm.d.ts  package.json
crust-ui/src/: App.svelte
crust-ui/src/chess/: board.ts  index.ts  worker.ts
crust-ui/src/chess/dtos/: move.ts  piece.ts
crust-ui/src/lib/: Board.svelte  Piece.svelte
src/: lib.rs  main.rs
src/chess/: bboard.rs  board.rs  game.rs  mod.rs  piece.rs  piece2.rs
